# FinnAgent

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
src/: agent.rs  catalog.rs  config.rs  evals.rs  input.rs  main.rs  markdown.rs  orchestrator.rs  prompt.rs  safety.rs  ui.rs
src/provider/: mod.rs  openai.rs  openrouter.rs
src/tools/: authorization.rs  codex.rs  confirm.rs  filesystem.rs  mail.rs  mod.rs  schema.rs  shell.rs  sysinfo.rs  web.rs
src/tools/artifacts/: documents.rs  images.rs  mod.rs  pdf.rs  spreadsheet.rs
