[package]
name = "finn-agent"
version = "0.1.0"
edition = "2024"
description = "A natural-language macOS assistant with OpenAI and OpenRouter providers"
license = "MIT"

[[bin]]
name = "finn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustyline = "17"
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
