[package]
name = "finn-agent"
version = "0.4.0"
edition = "2024"
description = "A natural-language macOS assistant with OpenAI and OpenRouter providers"
license = "MIT"

[[bin]]
name = "finn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
docx-rs = "0.4.20"
futures-util = { version = "0.3", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "tiff", "webp"] }
lopdf = "0.43"
quick-xml = "0.41"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "17"
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
umya-spreadsheet = "3"
walkdir = "2"
zip = "8.6"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
